re-record tests via azdev test cosmosdb --live command

--- a/src/azure-cli/azure/cli/command_modules/cosmosdb/tests/latest/recordings/test_cosmosdb_locations.yaml
+++ b/src/azure-cli/azure/cli/command_modules/cosmosdb/tests/latest/recordings/test_cosmosdb_locations.yaml
@@ -11,7 +11,7 @@ interactions:
       Connection:
       - keep-alive
       User-Agent:
-      - AZURECLI/2.47.0 azsdk-python-mgmt-cosmosdb/0.7.0 Python/3.8.1 (Windows-10-10.0.22621-SP0)
+      - AZURECLI/2.47.0 azsdk-python-mgmt-cosmosdb/9.1.0 Python/3.9.13 (Windows-10-10.0.22621-SP0)
     method: GET
     uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.DocumentDB/locations?api-version=2023-03-15
   response:
@@ -21,7 +21,7 @@ interactions:
         US","properties":{"supportsAvailabilityZone":true,"isResidencyRestricted":false,"isSubscriptionRegionAccessAllowedForAz":false,"isSubscriptionRegionAccessAllowedForRegular":false,"status":"Online","backupStorageRedundancies":["Geo","Zone","Local"]}},{"id":"subscriptionId/23587e98-b6ac-4328-a753-03bcd3c8e744/providers/Microsoft.DocumentDB/locations/australiasoutheast/","type":"Microsoft.DocumentDB/locations","name":"Australia
         Southeast","properties":{"supportsAvailabilityZone":false,"isResidencyRestricted":false,"isSubscriptionRegionAccessAllowedForAz":true,"isSubscriptionRegionAccessAllowedForRegular":false,"status":"Online","backupStorageRedundancies":["Geo","Local"]}},{"id":"subscriptionId/23587e98-b6ac-4328-a753-03bcd3c8e744/providers/Microsoft.DocumentDB/locations/canadacentral/","type":"Microsoft.DocumentDB/locations","name":"Canada
         Central","properties":{"supportsAvailabilityZone":true,"isResidencyRestricted":false,"isSubscriptionRegionAccessAllowedForAz":true,"isSubscriptionRegionAccessAllowedForRegular":true,"status":"Online","backupStorageRedundancies":["Geo","Local","Zone"]}},{"id":"subscriptionId/23587e98-b6ac-4328-a753-03bcd3c8e744/providers/Microsoft.DocumentDB/locations/centralindia/","type":"Microsoft.DocumentDB/locations","name":"Central
-        India","properties":{"supportsAvailabilityZone":true,"isResidencyRestricted":false,"isSubscriptionRegionAccessAllowedForAz":false,"isSubscriptionRegionAccessAllowedForRegular":true,"status":"Online","backupStorageRedundancies":["Geo","Local","Zone"]}},{"id":"subscriptionId/23587e98-b6ac-4328-a753-03bcd3c8e744/providers/Microsoft.DocumentDB/locations/southeastasia/","type":"Microsoft.DocumentDB/locations","name":"Southeast
+        India","properties":{"supportsAvailabilityZone":true,"isResidencyRestricted":false,"isSubscriptionRegionAccessAllowedForAz":true,"isSubscriptionRegionAccessAllowedForRegular":true,"status":"Online","backupStorageRedundancies":["Geo","Local","Zone"]}},{"id":"subscriptionId/23587e98-b6ac-4328-a753-03bcd3c8e744/providers/Microsoft.DocumentDB/locations/southeastasia/","type":"Microsoft.DocumentDB/locations","name":"Southeast
         Asia","properties":{"supportsAvailabilityZone":true,"isResidencyRestricted":true,"isSubscriptionRegionAccessAllowedForAz":false,"isSubscriptionRegionAccessAllowedForRegular":true,"status":"Online","backupStorageRedundancies":["Geo","Local","Zone"]}},{"id":"subscriptionId/23587e98-b6ac-4328-a753-03bcd3c8e744/providers/Microsoft.DocumentDB/locations/switzerlandnorth/","type":"Microsoft.DocumentDB/locations","name":"Switzerland
         North","properties":{"supportsAvailabilityZone":true,"isResidencyRestricted":false,"isSubscriptionRegionAccessAllowedForAz":true,"isSubscriptionRegionAccessAllowedForRegular":true,"status":"Online","backupStorageRedundancies":["Geo","Local","Zone"]}},{"id":"subscriptionId/23587e98-b6ac-4328-a753-03bcd3c8e744/providers/Microsoft.DocumentDB/locations/uaenorth/","type":"Microsoft.DocumentDB/locations","name":"UAE
         North","properties":{"supportsAvailabilityZone":true,"isResidencyRestricted":false,"isSubscriptionRegionAccessAllowedForAz":true,"isSubscriptionRegionAccessAllowedForRegular":true,"status":"Online","backupStorageRedundancies":["Geo","Local","Zone"]}},{"id":"subscriptionId/23587e98-b6ac-4328-a753-03bcd3c8e744/providers/Microsoft.DocumentDB/locations/eastasia/","type":"Microsoft.DocumentDB/locations","name":"East
@@ -64,16 +64,17 @@ interactions:
         Central","properties":{"supportsAvailabilityZone":true,"isResidencyRestricted":false,"isSubscriptionRegionAccessAllowedForAz":true,"isSubscriptionRegionAccessAllowedForRegular":true,"status":"Online","backupStorageRedundancies":["Geo","Local","Zone"]}},{"id":"subscriptionId/23587e98-b6ac-4328-a753-03bcd3c8e744/providers/Microsoft.DocumentDB/locations/swedensouth/","type":"Microsoft.DocumentDB/locations","name":"Sweden
         South","properties":{"supportsAvailabilityZone":false,"isResidencyRestricted":false,"isSubscriptionRegionAccessAllowedForAz":true,"isSubscriptionRegionAccessAllowedForRegular":true,"status":"Online","backupStorageRedundancies":["Geo","Local"]}},{"id":"subscriptionId/23587e98-b6ac-4328-a753-03bcd3c8e744/providers/Microsoft.DocumentDB/locations/qatarcentral/","type":"Microsoft.DocumentDB/locations","name":"Qatar
         Central","properties":{"supportsAvailabilityZone":true,"isResidencyRestricted":true,"isSubscriptionRegionAccessAllowedForAz":false,"isSubscriptionRegionAccessAllowedForRegular":false,"status":"Online","backupStorageRedundancies":["Local","Zone"]}},{"id":"subscriptionId/23587e98-b6ac-4328-a753-03bcd3c8e744/providers/Microsoft.DocumentDB/locations/polandcentral/","type":"Microsoft.DocumentDB/locations","name":"Poland
-        Central","properties":{"supportsAvailabilityZone":true,"isResidencyRestricted":true,"isSubscriptionRegionAccessAllowedForAz":true,"isSubscriptionRegionAccessAllowedForRegular":true,"status":"Online","backupStorageRedundancies":["Local","Zone"]}}]}'
+        Central","properties":{"supportsAvailabilityZone":true,"isResidencyRestricted":true,"isSubscriptionRegionAccessAllowedForAz":true,"isSubscriptionRegionAccessAllowedForRegular":true,"status":"Online","backupStorageRedundancies":["Local","Zone"]}},{"id":"subscriptionId/23587e98-b6ac-4328-a753-03bcd3c8e744/providers/Microsoft.DocumentDB/locations/malaysiasouth/","type":"Microsoft.DocumentDB/locations","name":"Malaysia
+        South","properties":{"supportsAvailabilityZone":false,"isResidencyRestricted":false,"isSubscriptionRegionAccessAllowedForAz":true,"isSubscriptionRegionAccessAllowedForRegular":true,"status":"Initializing","backupStorageRedundancies":["Geo","Local"]}}]}'
     headers:
       cache-control:
       - no-store, no-cache
       content-length:
-      - '20102'
+      - '20525'
       content-type:
       - application/json
       date:
-      - Tue, 11 Apr 2023 20:37:16 GMT
+      - Fri, 21 Apr 2023 23:25:22 GMT
       pragma:
       - no-cache
       server:
@@ -105,7 +106,7 @@ interactions:
       ParameterSetName:
       - --location
       User-Agent:
-      - AZURECLI/2.47.0 azsdk-python-mgmt-cosmosdb/0.7.0 Python/3.8.1 (Windows-10-10.0.22621-SP0)
+      - AZURECLI/2.47.0 azsdk-python-mgmt-cosmosdb/9.1.0 Python/3.9.13 (Windows-10-10.0.22621-SP0)
     method: GET
     uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.DocumentDB/locations/westus?api-version=2023-03-15
   response:
@@ -120,7 +121,7 @@ interactions:
       content-type:
       - application/json
       date:
-      - Tue, 11 Apr 2023 20:37:17 GMT
+      - Fri, 21 Apr 2023 23:25:22 GMT
       pragma:
       - no-cache
       server:
