--- a/scripts/live_test/CLITest.yml
+++ b/scripts/live_test/CLITest.yml
@@ -600,6 +600,7 @@ jobs:
         pip install azure-communication-email
         pip install mysql-connector-python
         pip install requests
+        pip install tqdm
         # pip install certifi
         # Send notification
         az -v
