--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1105,6 +1105,7 @@ jobs:
     displayName: "Breaking Change Check"
     env:
       PULL_REQUEST_NUMBER: $(System.PullRequest.PullRequestNumber)
+      JOB_NAME: $(System.JobName)
 
 #- job: NotifyCIErrors
 #  dependsOn:
