--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1102,11 +1102,23 @@ jobs:
       set -ev
       . env/bin/activate
       python scripts/ci/breaking_change_check.py
+      breakingChangeCheck='false'
+      if [[ -f '/$(HOME)/.azdev/env_config/mnt/vss/_work/1/s/env/breaking_change_check.json' ]]; then
+        breakingChangeCheck='true'
+      fi
+      echo "##vso[task.setvariable variable=breakingChangeCheck]$breakingChangeCheck"
     displayName: "Breaking Change Check"
     env:
       SRC_BRANCH: $(system.pullRequest.targetBranchName)
       PULL_REQUEST_NUMBER: $(System.PullRequest.PullRequestNumber)
       JOB_NAME: "breaking_change_check"
+  - task: PublishBuildArtifacts@1
+    condition: and(succeededOrFailed(), eq(variables.breakingChangeCheck, 'true'))
+    inputs:
+      # /mnt/vss/.azdev/env_config/mnt/vss/_work/1/s/env/breaking_change_check.json
+      PathtoPublish: '/$(HOME)/.azdev/env_config/mnt/vss/_work/1/s/env/breaking_change_check.json'
+      ArtifactName: 'breaking_change_check'
+      publishLocation: 'Container'
 
 #- job: NotifyCIErrors
 #  dependsOn:
