--- a/.github/ISSUE_TEMPLATE/Bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/Bug_report.yml
@@ -37,7 +37,8 @@ body:
       label: Errors
       description: >
         Please provide a clear error message here.
-      placeholder:
+      placeholder: >
+        A clear error message of the bug.
     validations:
       required: true
   - type: textarea
@@ -92,11 +93,6 @@ body:
         Extensions directory 'C:\Users\zelinwang\.azure\cliextensions'
 
         Python (Windows) 3.10.10 (tags/v3.10.10:aad5f6a, Feb  7 2023, 17:05:00) [MSC v.1929 32 bit (Intel)]
-
-        Legal docs and information: aka.ms/AzureCliLegal
-
-
-        Your CLI is up-to-date.
     validations:
       required: false
   - type: textarea
