--- a/.github/azure-client-tools-bot/config.yml
+++ b/.github/azure-client-tools-bot/config.yml
@@ -19,6 +19,7 @@ pull_request:
       init_comment: |
         Validation for Azure CLI Full Test Starting...
         Thanks for your contribution!
+      disable_check_suit: true
     - azure_pipeline:
         allow_list:
           - "Azure.azure-cli Breaking Change Test"
@@ -31,6 +32,7 @@ pull_request:
       init_comment: |
         Validation for Breaking Change Starting...
         Thanks for your contribution!
+      disable_check_suit: true
 cli_common_issues:
   issues:
     - tag: unofficial_cli
