--- a/.github/ISSUE_TEMPLATE/Bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/Bug_report.yml
@@ -36,9 +36,12 @@ body:
     attributes:
       label: Errors
       description: >
-        Please provide a clear error message here.
+        Please paste here the error message you have received. 
+        
+        **⚠ ATTENTION:** Make sure to remove all sensitive information, such as username, password, credential, subscription ID, etc.
       placeholder: >
-        A clear error message of the bug.
+        The command failed with an unexpected error. 
+        Here is the traceback: {The rest of the error message}
     validations:
       required: true
   - type: textarea
