[AppService] support az functions create py 3.11

--- a/src/azure-cli/azure/cli/command_modules/appservice/resources/WebappRuntimeStacks.json
+++ b/src/azure-cli/azure/cli/command_modules/appservice/resources/WebappRuntimeStacks.json
@@ -486,6 +486,15 @@
             }
         },
         {
+            "displayName": "PYTHON|3.11",
+            "configs": {
+                "linux_fx_version": "PYTHON|3.11"
+            },
+            "github_actions_properties": {
+                "github_actions_version": "3.11"
+            }
+        },
+        {
             "displayName": "RUBY|2.7",
             "configs": {
                 "linux_fx_version": "RUBY|2.7"
