--- a/.github/ISSUE_TEMPLATE/Bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/Bug_report.yml
@@ -27,8 +27,8 @@ body:
     id: cmd
     attributes:
       label: Related command
-      description: Please provide the related commands and parameters with az {command} if you can, so that we can quickly route to the related team for help.
-      placeholder: e.g., `az vm create --image`
+      description: Please provide the related commands with az {command} if you can, so that we can quickly route to the related team for help.
+      placeholder: e.g., `az vm create`
     validations:
       required: true
   - type: textarea
