[Update] update image alias test

--- a/src/azure-cli/azure/cli/command_modules/vm/tests/latest/recordings/test_vm_image_list_thru_services_edge_zone_by_arch.yaml
+++ b/src/azure-cli/azure/cli/command_modules/vm/tests/latest/recordings/test_vm_image_list_thru_services_edge_zone_by_arch.yaml
@@ -460,7 +460,7 @@ interactions:
       content-type:
       - application/json; charset=utf-8
       date:
-      - Mon, 22 May 2023 08:17:52 GMT
+      - Thu, 25 May 2023 06:51:20 GMT
       expires:
       - '-1'
       pragma:
@@ -1808,6 +1808,10 @@ interactions:
         \r\n  },\r\n  {\r\n    \"location\": \"westus\",\r\n    \"extendedLocation\"\
         : {\r\n      \"type\": \"EdgeZone\",\r\n      \"name\": \"microsoftlosangeles1\"\
         \r\n    },\r\n    \"name\": \"dcassociatesgroupinc\",\r\n    \"id\": \"/Subscriptions/00000000-0000-0000-0000-000000000000/Providers/Microsoft.Compute/Locations/westus/Publishers/dcassociatesgroupinc\"\
+        \r\n  },\r\n  {\r\n    \"location\": \"westus\",\r\n    \"extendedLocation\"\
+        : {\r\n      \"type\": \"EdgeZone\",\r\n      \"name\": \"microsoftlosangeles1\"\
+        \r\n    },\r\n    \"name\": \"dcdobrasil1651841970501\",\r\n    \"id\": \"\
+        /Subscriptions/00000000-0000-0000-0000-000000000000/Providers/Microsoft.Compute/Locations/westus/Publishers/dcdobrasil1651841970501\"\
         \r\n  },\r\n  {\r\n    \"location\": \"westus\",\r\n    \"extendedLocation\"\
         : {\r\n      \"type\": \"EdgeZone\",\r\n      \"name\": \"microsoftlosangeles1\"\
         \r\n    },\r\n    \"name\": \"ddn-whamcloud-5345716\",\r\n    \"id\": \"/Subscriptions/00000000-0000-0000-0000-000000000000/Providers/Microsoft.Compute/Locations/westus/Publishers/ddn-whamcloud-5345716\"\
@@ -7214,11 +7218,11 @@ interactions:
       cache-control:
       - no-cache
       content-length:
-      - '638400'
+      - '638723'
       content-type:
       - application/json; charset=utf-8
       date:
-      - Mon, 22 May 2023 08:17:53 GMT
+      - Thu, 25 May 2023 06:51:21 GMT
       expires:
       - '-1'
       pragma:
@@ -7285,7 +7289,7 @@ interactions:
       content-type:
       - application/json; charset=utf-8
       date:
-      - Mon, 22 May 2023 08:17:54 GMT
+      - Thu, 25 May 2023 06:51:22 GMT
       expires:
       - '-1'
       pragma:
@@ -7484,7 +7488,7 @@ interactions:
       content-type:
       - application/json; charset=utf-8
       date:
-      - Mon, 22 May 2023 08:17:54 GMT
+      - Thu, 25 May 2023 06:51:22 GMT
       expires:
       - '-1'
       pragma:
@@ -7545,7 +7549,7 @@ interactions:
       content-type:
       - application/json; charset=utf-8
       date:
-      - Mon, 22 May 2023 08:17:54 GMT
+      - Thu, 25 May 2023 06:51:23 GMT
       expires:
       - '-1'
       pragma:
@@ -7562,7 +7566,7 @@ interactions:
       x-content-type-options:
       - nosniff
       x-ms-ratelimit-remaining-resource:
-      - Microsoft.Compute/ListVMImagesVersionsFromLocation3Min;15995,Microsoft.Compute/ListVMImagesVersionsFromLocation30Min;43987
+      - Microsoft.Compute/ListVMImagesVersionsFromLocation3Min;15988,Microsoft.Compute/ListVMImagesVersionsFromLocation30Min;43979
     status:
       code: 200
       message: OK
@@ -7599,7 +7603,7 @@ interactions:
       content-type:
       - application/json; charset=utf-8
       date:
-      - Mon, 22 May 2023 08:17:55 GMT
+      - Thu, 25 May 2023 06:51:23 GMT
       expires:
       - '-1'
       pragma:
@@ -7728,7 +7732,7 @@ interactions:
       content-type:
       - application/json; charset=utf-8
       date:
-      - Mon, 22 May 2023 08:17:55 GMT
+      - Thu, 25 May 2023 06:51:23 GMT
       expires:
       - '-1'
       pragma:
@@ -7777,7 +7781,7 @@ interactions:
       content-type:
       - application/json; charset=utf-8
       date:
-      - Mon, 22 May 2023 08:17:55 GMT
+      - Thu, 25 May 2023 06:51:23 GMT
       expires:
       - '-1'
       pragma:
@@ -7794,7 +7798,7 @@ interactions:
       x-content-type-options:
       - nosniff
       x-ms-ratelimit-remaining-resource:
-      - Microsoft.Compute/ListVMImagesVersionsFromLocation3Min;15994,Microsoft.Compute/ListVMImagesVersionsFromLocation30Min;43986
+      - Microsoft.Compute/ListVMImagesVersionsFromLocation3Min;15987,Microsoft.Compute/ListVMImagesVersionsFromLocation30Min;43978
     status:
       code: 200
       message: OK
@@ -7846,7 +7850,7 @@ interactions:
       content-type:
       - application/json; charset=utf-8
       date:
-      - Mon, 22 May 2023 08:17:55 GMT
+      - Thu, 25 May 2023 06:51:24 GMT
       expires:
       - '-1'
       pragma:
@@ -7905,7 +7909,7 @@ interactions:
       content-type:
       - application/json; charset=utf-8
       date:
-      - Mon, 22 May 2023 08:17:56 GMT
+      - Thu, 25 May 2023 06:51:24 GMT
       expires:
       - '-1'
       pragma:
@@ -7959,7 +7963,7 @@ interactions:
       content-type:
       - application/json; charset=utf-8
       date:
-      - Mon, 22 May 2023 08:17:56 GMT
+      - Thu, 25 May 2023 06:51:24 GMT
       expires:
       - '-1'
       pragma:
