--- a/.github/ISSUE_TEMPLATE/Service_team_request.yml
+++ b/.github/ISSUE_TEMPLATE/Service_team_request.yml
@@ -73,6 +73,22 @@ body:
       placeholder: e.g., 2022-07-05
     validations:
       required: true
+  - type: input
+    id: pm
+    attributes:
+      label: PM Contact
+      description: Please provide PM contact information or github account.
+      placeholder: e.g., @pm
+    validations:
+      required: true
+  - type: input
+    id: engineer
+    attributes:
+      label: Engineer Contact
+      description: Please provide Engineer contact information or github account.
+      placeholder: e.g., @engineer
+    validations:
+      required: true
   - type: textarea
     id: additional-context
     attributes:
